# faster-whisper-server

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.forgeguard/: docs.yml
.github/workflows/: docs-validate.yml  release.yml
charts/faster-whisper-server/: Chart.yaml  values.yaml
charts/faster-whisper-server/templates/: whisper-deployment.yaml
deploy/: docker-compose.local.yml  docker-compose.portainer.jetson.yml  docker-compose.portainer.yml
docker/: Dockerfile
docker/jetson/: Dockerfile
docs/: responsible-use.md  security.md
docs/maintainers/development/: environment.md  testing.md
docs/maintainers/release/: release-process.md
docs/site/: index.md
docs/site/architecture/: model-lifecycle.md  overview.md  request-lifecycle.md
docs/site/concepts/: model-selection.md  privacy-and-responsible-use.md  transcription-and-translation.md
docs/site/configuration/: environment-variables.md  overview.md
docs/site/deployment/: compose.md  container.md  hardware-profiles.md  kubernetes.md  portainer.md
docs/site/getting-started/: quickstart.md
docs/site/operations/: health-and-readiness.md  observability-and-queues.md  security-hardening.md  upgrades.md
docs/site/reference/: compatibility.md  configuration.md  model-admin-api.md  openai-api.md
docs/site/troubleshooting/: common-errors.md  jetson.md  (+1 more)
scripts/: update_version.py
scripts/docs/: validate_docs.py
server/: __main__.py  activity.py  config.py  main.py  model_admin.py  model_manager.py  system.py  tls.py  transcription.py  web.py
tests/: test_health_readiness.py  test_model_mode.py  test_server_api.py  test_system.py  test_tls.py
webui/: package.json
webui/src/: App.tsx
(+9 files in other folders)
